@@ -84,12 +84,12 @@ def parse_args():
     grp_costs = optparse.OptionGroup(parser, "Costs")
     grp_costs.add_option("-D", "--duprange", dest="duprange",
                          metavar="<dup range>",
-                         default=dlcpar.reconscape.DEFAULT_RANGE, type="string",
+                         type="string", default=dlcpar.reconscape.DEFAULT_RANGE,
                          action="callback", callback=parse_range,
                          help="duplication range (default: %s)" % dlcpar.reconscape.DEFAULT_RANGE_STR)
     grp_costs.add_option("-L", "--lossrange", dest="lossrange",
                          metavar="<loss range>",
-                         default=dlcpar.reconscape.DEFAULT_RANGE, type="string",
+                         type="string", default=dlcpar.reconscape.DEFAULT_RANGE,
                          action="callback", callback=parse_range,
                          help="loss range (default: %s)" % dlcpar.reconscape.DEFAULT_RANGE_STR)
     parser.set_defaults(explicit=False)
@@ -99,17 +99,17 @@ def parse_args():
     parser.set_defaults(delay=False)
     grp_heur.add_option("--max_loci", dest="max_loci",
                         metavar="<max # of loci>",
-                        default=-1, type="int",
+                        type="int", default=-1,
                         help="maximum # of co-existing loci (in each ancestral species), " +\
                              "set to -1 for no limit (default: -1)")
     grp_heur.add_option("--max_dups", dest="max_dups",
                         metavar="<max # of dups>",
-                        default=4, type="int",
+                        type="int", default=4,
                         help="maximum # of duplications (in each ancestral species), " +\
                              "set to -1 for no limit (default: 4)")
     grp_heur.add_option("--max_losses", dest="max_losses",
                         metavar="<max # of losses>",
-                        default=4, type="int",
+                        type="int", default=4,
                         help="maximum # of losses (in each ancestral species), " +\
                              "set to -1 for no limit (default: 4)")
     parser.add_option_group(grp_heur)
