@@ -28,7 +28,7 @@ except ImportError:
 PROGRAM_NAME = u"DLCPar"
 PROGRAM_VERSION_MAJOR = 1
 PROGRAM_VERSION_MINOR = 0
-PROGRAM_VERSION_RELEASE = 0
+PROGRAM_VERSION_RELEASE = 1
 PROGRAM_VERSION = (PROGRAM_VERSION_MAJOR,
                    PROGRAM_VERSION_MINOR,
                    PROGRAM_VERSION_RELEASE)
