@@ -1,6 +1,10 @@
 DLCpar Change Log
 -----------------------
 
+dlcpar-1.0.1 (2016/10/20)
+-----------------------
+- add convergence-based stop criterion to dlcpar_search
+
 dlcpar-1.0 (2016/09/28)
 -----------------------
 - count number of optimal reconciliations
